--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>arkham-deck-builder-online</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Eldersign Deck Builder</title>
+    <meta name="description" content="Create custom investigator decks for your next investigation" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="arkham-deck-builder-online" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Eldersign Deck Builder" />
+    <meta property="og:description" content="Create custom investigator decks for your next investigation" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
